Closed
Bug 252195
Opened 21 years ago
Closed 19 years ago
Windows 2000 IPv6 support needs to use wship6.dll not ws2_32.dll
Categories
(NSPR :: NSPR, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
4.6
People
(Reporter: bugzilla.mozilla.simon, Assigned: darin.moz)
References
Details
Attachments
(1 file, 1 obsolete file)
2.00 KB,
patch
|
darin.moz
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla
Build Identifier:
NSPR only checks ws2_32.dll for getaddrinfo() which only works under Windows XP
because Windows 2000 does not have getaddrinfo() in ws2_32.dll, only in
wship6.dll (when the IPv6 kit is installed).
If getaddrinfo() is not found in ws2_32.dll, it should check in wship6.dll too.
Reproducible: Always
Steps to Reproduce:
Start Mozilla
Actual Results:
Mozilla cannot find getaddrinfo() in ws2_32.dll and does not enable IPv6 support.
Expected Results:
Mozilla also tried to find getaddrinfo() in wship6.dll and enable IPv6 support.
Comment 1•21 years ago
|
||
I don't plan to support IPv6 on Windows 2000 because
I understand it's a Technology Preview.
If it is a production release, please let me know.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Comment 2•20 years ago
|
||
(In reply to comment #1)
> I don't plan to support IPv6 on Windows 2000 because
> I understand it's a Technology Preview.
>
> If it is a production release, please let me know.
I wonder how you compile the thing, as there normally exists a wrapper for this
when IPv6 is compiled in. This wrapper does the automatic failback between the
current XP style getaddrinfo() function, the Win2k/NT4 version and will also
fall back to gethostbyname() on Win98.
Btw, even PuTTY, which does this itself, works fine, only a couple of lines
extra, now that can't hurt that much to support a large number of Windows 2000
and NT4 users, or is Firefox not intented for Windows users? They can of course
use IE which comes in the box with IPv6 support ;)
Interresting links for you:
http://www.developer.com/tech/article.php/10923_3382721_1
Comment 3•20 years ago
|
||
I know it's just a few lines to add
this support. It's a matter of policy.
We don't support pre-releases in general.
Microsoft clearly says that this is a
pre-release:
(http://msdn.microsoft.com/downloads/sdks/platform/tpipv6.asp)
Note: This is not a released product
and should not be deployed in a
production environment.
The software supplied in this Technology
Preview is not supported and Microsoft
does not provide any level of technical support.
However, if Microsoft products (such as
Internet Explorer) support the IPv6 Technology
Preview for Windows 2000, I can add this
support.
Reporter | ||
Comment 4•20 years ago
|
||
> However, if Microsoft products (such as
> Internet Explorer) support the IPv6 Technology
> Preview for Windows 2000, I can add this
> support.
Internet Explorer supports IPv6 with the technology preview (since it
overwrites/updates a .dll that internet explorer, outlook express, and probably
other applications use).
Comment 5•20 years ago
|
||
Darin, could you put together a patch? This should
be simple. Thanks.
Assignee: wtchang → darin
Status: ASSIGNED → NEW
Updated•20 years ago
|
Target Milestone: --- → 4.6
Comment 6•20 years ago
|
||
We look up getaddrinfo and freeaddrinfo in
ws2_32.dll first. If not found, and if
wship6.dll is present, we look up getaddrinfo
and freeaddinfo in it.
Please review and test this patch on IPv6-enabled
Windows XP and Windows 2000 systems. I don't
have access to either. I've tested the patch
on Windows XP as much as I can.
Attachment #176955 -
Flags: review?(darin)
Comment 7•20 years ago
|
||
Slight optimization: if getaddrinfo is not found
in the library, no need to look up freeaddrinfo in
it.
Attachment #176955 -
Attachment is obsolete: true
Attachment #176957 -
Flags: review?(darin)
Updated•20 years ago
|
Attachment #176955 -
Flags: review?(darin)
Assignee | ||
Comment 8•20 years ago
|
||
cc'ing lorenzo... he might be able to help test this.
Assignee | ||
Comment 9•20 years ago
|
||
Comment on attachment 176957 [details] [diff] [review]
Proposed patch v1.1
r=darin
Attachment #176957 -
Flags: review?(darin) → review+
Comment 10•20 years ago
|
||
Comment on attachment 176957 [details] [diff] [review]
Proposed patch v1.1
I checked in the patch on the NSPR trunk (NSPR 4.6)
and NSPRPUB_PRE_4_2_CLIENT_BRANCH (Mozilla 1.8 Beta 2).
Comment 11•19 years ago
|
||
This bug is fixed in NSPR 4.6 and Firefox 1.5 Beta 1.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•