Bugzilla Bug 252195: use Microsoft IPv6 Technology Preview for Windows 2000 (wship6.dll), if available. r=darin.